@@ -8,8 +8,14 @@
  */
 require.config(
   {
+    // An array of dependencies to load. Useful when require is defined as a config object before require.js
+    // is loaded, and you want to specify dependencies to load as soon as require() is defined.
     deps: ["main"],
 
+    // baseUrl: defaults to the location of the HTML page that loads require.js.
+
+    // Path mappings for module names not found directly under baseUrl. The path settings are assumed to be
+    // relative to baseUrl unless the paths setting starts with a "/" or has a URL protocol.
     paths: {
       // contrib
       easel: "../contrib/easel-0.5.0",
@@ -24,6 +30,8 @@ require.config(
       'EASEL-PHET': "../common/easel-phet/js"
     },
 
+    // Configure the dependencies and exports for older, traditional "browser globals" scripts
+    // that do not use define() to declare the dependencies and set a module value.
     shim: {
       easel: {
         exports: "createjs"
@@ -36,5 +44,6 @@ require.config(
       }
     },
 
-    urlArgs: new Date().getTime()  // cache buster to make browser refresh load all included scripts
+    //TODO: Remove this before deploy!
+    urlArgs: new Date().getTime()  // cache buster to make browser reload all included scripts
   } );
